Reorganize conclusion to make it more impactful

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -1,27 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57696798",
+   "cell_type": "markdown",
+   "id": "6669b4c7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "import pandas as pd\n",
-    "import polars as pl\n",
-    "\n",
-    "from load_data import data_loader\n",
-    "\n",
-    "emissions = data_loader()"
+    "![](assets/image.png)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5e1a0db2",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "My name is Alix Tiran-Cappello, I work as a data scientist / MLOPS pipeline maintainer for Renault Group for my day job.\n",
     "\n",
@@ -62,14 +56,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68a928fb",
+   "metadata": {},
+   "source": [
+    "# Step 1: From Pandas To Polars\n",
+    "\n",
+    "![kent-hat](assets/kent-beck-hat.png){width=150}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117f5150",
+   "id": "57696798",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import pandas as pd\n",
+    "import polars as pl\n",
+    "\n",
+    "from load_data import data_loader\n",
+    "\n",
     "emissions_pandas = (\n",
-    "    emissions.filter(pl.col.electric_range_km.is_not_null()).collect().to_pandas()\n",
+    "    data_loader().filter(pl.col.electric_range_km.is_not_null()).collect().to_pandas()\n",
     ")"
    ]
   },
@@ -81,16 +93,6 @@
    "outputs": [],
    "source": [
     "%load_ext notifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68a928fb",
-   "metadata": {},
-   "source": [
-    "# Step 1: From Pandas To Polars\n",
-    "\n",
-    "![kent-hat](assets/kent-beck-hat.png){width=150}\n"
    ]
   },
   {
@@ -129,6 +131,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd1e6839",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fc7825d",
+   "metadata": {},
+   "source": [
+    "# But What About TDD?\n",
+    "\n",
+    "## This is Kent Beck:\n",
+    "\n",
+    "![alt text](assets/kent_beck.png){width=300}\n",
+    "\n",
+    "- ##### Kent coined the term TDD\n",
+    "- ##### Kent created one of the first testing frameworks\n",
+    "- ##### Kent found that a testing framework should be written in the same language as the code\n",
+    "- ##### Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
+    "- ##### Kent has usually good ideas about software development\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8b68b24a",
    "metadata": {},
    "outputs": [],
@@ -136,9 +164,112 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f372dc5c",
+   "metadata": {},
+   "source": [
+    "## Enters `Pelage`\n",
+    "\n",
+    "##### A testing framework to be used with polars to express data science tests clearly and easily.\n",
+    "\n",
+    "##### Pass a dataframe to a testing function:\n",
+    "\n",
+    "- ##### If it fails you get a nice descriptive error message!\n",
+    "- ##### If it passes, you get your dataframe back!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca947496",
+   "metadata": {},
+   "source": [
+    "## Step 2: Now Let's Do Some Real Tdd In Polars!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4fbb6c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emissions_for_tdd = (\n",
+    "    data_loader().filter(pl.col.electric_range_km.is_not_null()).collect()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "849fcbb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e18016a",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "primary_key_columns = [\n",
+    "    \"vehicle_id\",\n",
+    "    \"reporting_period\",\n",
+    "    \"obfcm_data_source\",\n",
+    "    \"used_in_calculation\",\n",
+    "]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc2fa600",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "#### Method Chaining: From horrible slow-performing pandas to good, easy-to-read pandas code.\n",
+    "\n",
+    "#### Translation to polars becomes easy: A good equivalence test + `.pipe(pl.DataFrame)` + you shift this up!\n",
+    "\n",
+    "#### With TDD in data science, we rapidly get larger insights from just a few data-tests as we build up our analysis:\n",
+    "\n",
+    "- **Being able to express tests in the same manner as your code is a critical part of the TDD workflow.**\n",
+    "- **This is already done for your in pelage, the core logic leverages polars (except for processing user inputs).**\n",
+    "- **The result: a simple, easy to use package, that allows to write from the start code of great quality that is required for production contexts.**\n",
+    "\n",
+    "#### All you have to do is:\n",
+    "\n",
+    "- **❌ Write a failing test!**\n",
+    "- **✅ Write some code to make it pass!**\n",
+    "- **🔄 Refactor to make it better!**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd47bf2",
+   "metadata": {},
+   "source": [
+    "# And Now?\n",
+    "\n",
+    "- ### Type `uv add pelage` ( ~~pip install pelage~~, it works but `uv` is better )\n",
+    "- ### Got to the website: https://alixtc.github.io/pelage/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21afd900",
+   "metadata": {},
+   "source": [
+    "# Annexes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9332ca9",
    "metadata": {},
    "source": [
+    "## Refactoring\n",
+    "\n",
     "```python\n",
     "main_yearly_emissions_per_manufacturer = (\n",
     "    emissions_pandas.dropna(subset=[\"fuel_consumption\"])\n",
@@ -182,89 +313,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc7825d",
-   "metadata": {},
-   "source": [
-    "# But What About TDD?\n",
-    "\n",
-    "## This is Kent Beck:\n",
-    "\n",
-    "![alt text](assets/kent_beck.png){width=350}\n",
-    "\n",
-    "- ##### Kent coined the term TDD\n",
-    "- ##### Kent created one of the first testing frameworks\n",
-    "- ##### Kent found that a testing framework should be written in the same language as the code\n",
-    "- ##### Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
-    "- ##### Kent has usually good ideas about software development\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f372dc5c",
-   "metadata": {},
-   "source": [
-    "## Enters Pelage\n",
-    "\n",
-    "##### A testing framework to be used with polars to express data science concepts clearly and easily.\n",
-    "\n",
-    "##### Pass a dataframe to a testing function:\n",
-    "\n",
-    "- ##### If it fails you get a nice descriptive error message!\n",
-    "- ##### If it passes, you get your dataframe back!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec88c075",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4fbb6c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emissions_for_tdd = emissions.filter(pl.col.electric_range_km.is_not_null()).collect()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca947496",
-   "metadata": {},
-   "source": [
-    "## Step 2: Now Let's Do Some Real Tdd In Polars!\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "849fcbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e18016a",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "primary_key_columns = [\n",
-    "    \"vehicle_id\",\n",
-    "    \"reporting_period\",\n",
-    "    \"obfcm_data_source\",\n",
-    "    \"used_in_calculation\",\n",
-    "]\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f856c30f",
    "metadata": {},
    "source": [
+    "## TDD With Polars and Pelage\n",
+    "\n",
     "```python\n",
     "(\n",
     "    emissions_for_tdd.drop_nulls(subset=[\"model_variant\", \"license_plate\"])\n",
@@ -297,21 +350,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbc9b3a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loaded_stocks = pl.read_parquet(\"data/stocks.parquet\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8d6bc1d6",
    "metadata": {},
    "source": [
+    "## TDD With Polars And Pelage (part 2)\n",
+    "\n",
     "```python\n",
+    "loaded_stocks = pl.read_parquet(\"data/stocks.parquet\")\n",
     "full_stocks_by_10min = (\n",
     "    loaded_stocks\n",
     "    .filter(\n",
@@ -352,36 +398,6 @@
     ")\n",
     "full_stocks_by_10min\n",
     "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75310255",
-   "metadata": {},
-   "source": [
-    "I'll leave it here for now because we have seen enough examples so that you can get a reasonable idea of pelage capabilities.\n",
-    "We saw some checks that apply for columns, rows and even groups and there are more features for time series, infinite values and more.\n",
-    "\n",
-    "# Conclusion\n",
-    "\n",
-    "To summarize this presentation, we have seen how we can refactor some horrible slow-performing pandas code into good pandas code using method chaining.\n",
-    "\n",
-    "We have seen that it is then fairly easy to translate into polars, with a good equivalence test, you just write a `.pipe(pl.DataFrame)` and then you shift it up!\n",
-    "\n",
-    "And then we discovered how much valuable insights and intel we can derive from just a few simple data tests to build up our analysis.\n",
-    "\n",
-    "As you can see, being able to express tests in the same manner as the code you are writing is a critical part of the TDD workflow.\n",
-    "\n",
-    "But thankfully this part has already be done for your in pelage, because under the hood, beside a few things to process user inputs, all the core logic leverages polars.\n",
-    "\n",
-    "The result is a relative simple but easy to use package, that allows to write from the very start code of great quality that is required for production.\n",
-    "\n",
-    "All you have to do is: write a failing test, write some code to make it pass, once the test passes, refactor to make it better.\n",
-    "\n",
-    "# And Now?\n",
-    "\n",
-    "- ### Got to the website: https://alixtc.github.io/pelage/\n",
-    "- ### Type `uv add pelage`\n"
    ]
   }
  ],
