Add QR codes for links to presentation

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -253,7 +253,11 @@
     "# And Now?\n",
     "\n",
     "- ### Type `uv add pelage` ( ~~pip install pelage~~, it works but `uv` is better )\n",
-    "- ### Got to the website: https://alixtc.github.io/pelage/\n"
+    "- ### Got to the website: https://alixtc.github.io/pelage/\n",
+    "- ### QR Code for the Presentation \n",
+    "![](assets/qr_presentation_link.png)\n",
+    "- ### QR Code for my LinkedIn\n",
+    "![](assets/qr_linkedin_profile.png)"
    ]
   },
   {
