Improve qr codes, remove supplements

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -212,13 +212,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "primary_key_columns = [\n",
     "    \"vehicle_id\",\n",
     "    \"reporting_period\",\n",
     "    \"obfcm_data_source\",\n",
     "    \"used_in_calculation\",\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -254,155 +253,10 @@
     "\n",
     "- ### Type `uv add pelage` ( ~~pip install pelage~~, it works but `uv` is better )\n",
     "- ### Got to the website: https://alixtc.github.io/pelage/\n",
-    "- ### QR Code for the Presentation \n",
-    "![](assets/qr_presentation_link.png)\n",
+    "- ### QR Code for the Presentation\n",
+    "  ![](assets/qr_presentation_link.png){width=200}\n",
     "- ### QR Code for my LinkedIn\n",
-    "![](assets/qr_linkedin_profile.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21afd900",
-   "metadata": {},
-   "source": [
-    "# Annexes\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9332ca9",
-   "metadata": {},
-   "source": [
-    "## Refactoring\n",
-    "\n",
-    "```python\n",
-    "main_yearly_emissions_per_manufacturer = (\n",
-    "    emissions_pandas.dropna(subset=[\"fuel_consumption\"])\n",
-    "    .drop([\"vehicle_family_number\"], axis=1)\n",
-    "    .assign(\n",
-    "        fuel_type=lambda df: df[\"fuel_type\"].replace({\"PETROL\": \"petrol\"}),\n",
-    "        fuel_consumption_per_100km=lambda df: df[\"fuel_consumption\"] * 100,\n",
-    "    )\n",
-    "    .groupby([\"manufacturer_name\", \"year\"])\n",
-    "    .agg(\n",
-    "        mean_fuel_consumption=(\"fuel_consumption_per_100km\", \"mean\"),\n",
-    "        mean_electric_range=(\"electric_range_km\", \"mean\"),\n",
-    "        vehicle_count=(\"vehicle_id\", \"nunique\"),\n",
-    "    )\n",
-    "    .reset_index()\n",
-    "    .sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
-    "    .loc[lambda df: df[\"vehicle_count\"] >= 100]\n",
-    "    .reset_index(drop=True)\n",
-    ")\n",
-    "\n",
-    "emissions_polars = pl.DataFrame(emissions_pandas)\n",
-    "\n",
-    "main_yearly_emissions_per_manufacturer = (\n",
-    "    emissions_polars.drop_nulls(subset=[\"fuel_consumption\"])\n",
-    "    .drop([\"vehicle_family_number\"])\n",
-    "    .with_columns(\n",
-    "        fuel_type=pl.col.fuel_type.replace({\"PETROL\": \"petrol\"}),\n",
-    "        fuel_consumption_per_100km=pl.col.fuel_consumption * 100,\n",
-    "    )\n",
-    "    .group_by(\"manufacturer_name\", \"year\")\n",
-    "    .agg(\n",
-    "        mean_fuel_consumption=pl.col.fuel_consumption_per_100km.mean(),\n",
-    "        mean_electric_range=pl.col.electric_range_km.mean(),\n",
-    "        vehicle_count=pl.col.vehicle_id.n_unique().cast(pl.Int64),\n",
-    "    )\n",
-    "    .sort([\"mean_fuel_consumption\", \"year\"], descending=True)\n",
-    "    .filter(pl.col.vehicle_count >= 100)\n",
-    ")\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f856c30f",
-   "metadata": {},
-   "source": [
-    "## TDD With Polars and Pelage\n",
-    "\n",
-    "```python\n",
-    "(\n",
-    "    emissions_for_tdd.drop_nulls(subset=[\"model_variant\", \"license_plate\"])\n",
-    "    .with_columns(pl.col.fuel_type.str.to_lowercase())\n",
-    "    .filter(pl.col.fuel_type.is_in([\"diesel\", \"petrol\"]).not_())\n",
-    "    .cast({\"used_in_calculation\": pl.Boolean})\n",
-    "    .filter(pl.len().over(primary_key_columns) == 1)\n",
-    "    .pipe(plg.accepted_range, {\"mass_kg\": (1000, 3000), \"engine_power_kw\": (25, 600)})\n",
-    "    .pipe(\n",
-    "        plg.has_no_nulls,\n",
-    "        [\n",
-    "            \"country\",\n",
-    "            \"manufacturer_name\",\n",
-    "            \"model_type\",\n",
-    "            \"model_variant\",\n",
-    "            \"license_plate\",\n",
-    "            \"brand_name\",\n",
-    "            *primary_key_columns,\n",
-    "        ],\n",
-    "    )\n",
-    "    .pipe(plg.custom_check, pl.col.fuel_type.str.contains(r\"[A-Z]\").not_())\n",
-    "    .pipe(\n",
-    "        plg.unique_combination_of_columns,\n",
-    "        primary_key_columns,\n",
-    "    )\n",
-    "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
-    "    .pipe(plg.has_dtypes, {\"used_in_calculation\": pl.Boolean})\n",
-    ")\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d6bc1d6",
-   "metadata": {},
-   "source": [
-    "## TDD With Polars And Pelage (part 2)\n",
-    "\n",
-    "```python\n",
-    "loaded_stocks = pl.read_parquet(\"data/stocks.parquet\")\n",
-    "full_stocks_by_10min = (\n",
-    "    loaded_stocks\n",
-    "    .filter(\n",
-    "        (\n",
-    "            pl.col.zone.is_in([\"zone_28\", \"zone_29\", \"zone_17\"])\n",
-    "            & (pl.col.subzone == \"subzone_a\")\n",
-    "        ).not_()\n",
-    "    )\n",
-    "    .with_columns(\n",
-    "        pl.col.timestamp.cast(pl.Datetime(time_unit=\"ms\")).dt.truncate(\"10m\"),\n",
-    "        pl.col.stock_value.clip(0, None),\n",
-    "    )\n",
-    "    .group_by(\"zone\", \"subzone\", \"timestamp\")\n",
-    "    .agg(\n",
-    "        pl.col.stock_value.min().name.suffix(\"_min\"),\n",
-    "        pl.col.stock_value.max().name.suffix(\"_max\"),\n",
-    "    )\n",
-    "    .with_columns(\n",
-    "        date=pl.col.timestamp.dt.date(),\n",
-    "    )\n",
-    "    .filter(pl.len().over(\"zone\", \"subzone\", \"date\") > 1)\n",
-    "    .sort(\"zone\", \"subzone\", \"timestamp\")\n",
-    "    .pipe(plg.has_dtypes, {\"timestamp\": pl.Datetime(time_unit=\"ms\")})\n",
-    "    .pipe(plg.has_no_nulls)\n",
-    "    .pipe(plg.is_monotonic, \"timestamp\", strict=True, group_by=[\"zone\", \"subzone\"])\n",
-    "    .pipe(plg.unique_combination_of_columns, [\"zone\", \"subzone\", \"timestamp\"])\n",
-    "    .pipe(\n",
-    "        plg.accepted_range, {\"stock_value_min\": (0, None), \"stock_value_max\": (0, None)}\n",
-    "    )\n",
-    "    .pipe(\n",
-    "        plg.custom_check,\n",
-    "        (\n",
-    "            pl.col.zone.is_in([\"zone_28\", \"zone_29\", \"zone_17\"])\n",
-    "            & (pl.col.subzone == \"subzone_a\")\n",
-    "        ).not_(),\n",
-    "    )\n",
-    "    .pipe(plg.not_constant, columns=\"timestamp\", group_by=[\"zone\", \"subzone\", \"date\"])\n",
-    ")\n",
-    "full_stocks_by_10min\n",
-    "```\n"
+    "  ![](assets/qr_linkedin_profile.png){width=200}\n"
    ]
   }
  ],
